--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 
 .App {
@@ -9,6 +10,45 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.blue {
+  background: repeating-linear-gradient(
+    -45deg,
+    white 0,
+    white 20%,
+    #08d9d6 0,
+    #08d9d6 80%,
+    white 0,
+    white
+  );
+  color: #08d9d6;
+}
+
+.red {
+  background: repeating-linear-gradient(
+    -45deg,
+    white 0,
+    white 20%,
+    #ff2e63 0,
+    #ff2e63 80%,
+    white 0,
+    white
+  );
+  color: #ff2e63;
+}
+
+.green {
+  background: repeating-linear-gradient(
+    -45deg,
+    white 0,
+    white 20%,
+    #08d95f 0,
+    #08d95f 80%,
+    white 0,
+    white
+  );
+  color: #08d95f;
 }
 
 .card {
@@ -55,6 +95,7 @@ body {
   background-color: #212121;
   cursor: pointer;
   margin-top: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 .card__button-icon {
